# clipDownloader

./: .gitignore  Cargo.toml  README.md  TODO.MD  dl_setting.md  fix.md  index.html  run.ps1  run.sh  styles.css  test.csv
.github/workflows/: build-msix.yml  build-release.yml  build.yaml  certificate.yaml  release.yaml  release.yml  tag-release.yml
pyinstaller-hooks/: hook-gallery_dl.py  rthook-gallery-dl.py
src/: app.rs  dom.rs  log.rs  main.rs  types.rs
src-tauri/: Cargo.toml  silent-install.wxs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/macos/: entitlements.plist
src-tauri/src/: database.rs  lib.rs  logging.rs  main.rs  settings.rs
src-tauri/src/commands/: downloader.rs  event.rs  files.rs  import.rs  library.rs  list.rs  log.rs  mod.rs  parse.rs  settings_cmd.rs  tools.rs
src-tauri/src/download/: image.rs  manager.rs  mod.rs  pipeline.rs  video.rs
src-tauri/src/utils/: os.rs  url.rs
src/components/: sidebar.rs
src/pages/: downloads.rs  extension.rs  home.rs  library.rs  mod.rs  settings.rs  sponsor.rs
src/styles/: base.css  downloads.css  extension.css  sidebar.css  sponsor.css
