[package]
name = "clip-downloader-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlInputElement",
    "Event",
    "EventTarget",
    "FileReader",
    "File",
    "FileList",
    "Blob",
    "ProgressEvent",
    "console"
] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
csv = "1.3"
yew_icons = { version = "0.8.0", features = [
    "LucideHome",
    "LucideDownload",
    "LucideLibrary",
    "LucideSettings"
] }

[workspace]
members = ["src-tauri"]
