[package]
name = "clip-downloader-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-hooks = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlInputElement",
    "HtmlSelectElement",
    "Event",
    "EventTarget",
    "FileReader",
    "File",
    "FileList",
    "Blob",
    "ProgressEvent",
    "console"
] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
csv = "1.3"
serde_json = "1"
gloo-timers = { version = "0.3.0", features = ["futures"] }

yew_icons = { version = "0.8.0", features = [
    "LucideHome",
    "LucideDownload",
    "LucideLibrary",
    "LucideSettings",
    "LucideImage",
    "LucideVideo",
    "LucideBookmark",
    "LucideHeart",
    "LucideUser",
    "LucideFolder",
    "LucideTrash2",
    "LucidePause",
    "LucidePlay",
    "LucideHeart",
    "LucideRotateCcw",
    "LucideMusic"
] }
lucide-yew = { version = "2", features = ["arrows"] }

[build-dependencies]
vergen = { version = "8.2.1", features = ["build", "cargo", "git", "rustc"] }

[workspace]
members = ["src-tauri"]
